policy/istio/canary/vs.90-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-vs
  namespace: development
spec:
  gateways:
    - demo-gateway
    - mesh
  hosts:
  - "microservice-a.development.svc.cluster.local"
  http:
  - route:
    - destination:
        host: microservice-a.development.svc.cluster.local
        subset: v1
        port:
          number: 8080
      weight: 90
    - destination:
        host: microservice-a.development.svc.cluster.local
        subset: v2
        port:
          number: 8080
      weight: 10
